feat: Add Slides About DetNet and Importance of QoS

--- a/main.tex
+++ b/main.tex
@@ -328,6 +328,28 @@
 	\end{frame}
 
 	%-------------------------------------------------------------------------------
+	\begin{frame}{اهمیت}
+		\begin{itemize}\RTList{}
+			\justifying%
+			\item کیفیت سرویس انتها به انتها یک زنجیره در واقعا معیار کارآیی است که توسط کاربران احساس می‌شود.
+			\item ظهور اینترنت اشیا و شبکه‌های نسل پنجم
+			\begin{itemize}\RTList{}
+				\item \lr{tactile internet}
+				\item شبکه‌های باتاخیر بسیار کم
+			\end{itemize}
+		\end{itemize}
+	\end{frame}
+
+	%-------------------------------------------------------------------------------
+	\begin{frame}{شبکه‌های قطعی}
+		\begin{itemize}\RTList{}
+			\justifying%
+			\item \textcolor{green}{Deterministic Networks}
+		  	\item \textcolor{orange}{تضمین} یک کران بالا برای تاخیر
+		\end{itemize}
+	\end{frame}
+
+	%-------------------------------------------------------------------------------
 	\section{مرور ادبیات}
 
 	%-------------------------------------------------------------------------------
