fix: Correct Typo

--- a/main.tex
+++ b/main.tex
@@ -331,10 +331,10 @@
 	\begin{frame}{اهمیت}
 		\begin{itemize}\RTList{}
 			\justifying%
-			\item کیفیت سرویس انتها به انتها یک زنجیره در واقعا معیار کارآیی است که توسط کاربران احساس می‌شود.
+			\item کیفیت سرویس انتها به انتها یک زنجیره در واقع معیار کارآیی است که توسط کاربران احساس می‌شود.
 			\item ظهور اینترنت اشیا و شبکه‌های نسل پنجم
 			\begin{itemize}\RTList{}
-				\item \lr{tactile internet}
+				\item \lr{Tactile Internet}
 				\item شبکه‌های باتاخیر بسیار کم
 			\end{itemize}
 		\end{itemize}
