feat: Add Even More Slides

--- a/main.tex
+++ b/main.tex
@@ -400,8 +400,48 @@
 	\begin{frame}{معماری شبکه‌سازی قطعی}
 		\begin{itemize}\RTList{}
 			\justifying%
-			\item مورد
+			\item کیفیت سرویس در شبکه‌های قطعی:
+			\begin{itemize}\RTList{}
+			  \item کران بالا و پایین برای تاخیر انتها به انتها از مبدا به مقصد، تغییرات تاخیر کران‌دار، ارسال زمان‌دار
+			  \item نسبت از دست رفتن بسته‌ها تحت فرض‌های مختلف
+			  \item کران بالا برای بسته‌های خارج از ترتیب
+			\end{itemize}
+		  \item تنها دغدغه در شبکه‌سازی قطعی بدترین حالت‌ها می‌باشند.
+		  \item اینجا حالت‌های میانگین و ... از اهمیت کمی برخوردار هستند.
+		  \item تکنیک‌های برآورده ساختن نیازمندی‌های کیفیت سرویس
+		  \begin{itemize}\RTList{}
+			\item تخصیص منابع
+			\item حفاظت از سرویس
+			\item مسیرهای صریح
+		  \end{itemize}
 		\end{itemize}
+	\end{frame}
+
+	%-------------------------------------------------------------------------------
+	\begin{frame}{معماری شبکه‌سازی قطعی}
+		\begin{itemize}\RTList{}
+			\justifying%
+			\item تخصیص منابع
+			\begin{itemize}\RTList{}
+			  \item بدست آوردن کیفیت سرویس با از بین بردن یا کاهش اثر از دست رفتن بسته‌ها در اثر ازدحام
+			  \item کاهش تغییرات تاخیر
+			\end{itemize}
+		  \item حافظت از سرویس با تحمل یا از بین بردن از دست رفتن بسته‌ها در اثر خرابی تجهیزات
+		  \begin{itemize}\RTList{}
+			\item ارسال به ترتیب بسته‌ها
+			\item تکرار بسته‌ها
+			\item کد کردن بسته‌ها
+		  \end{itemize}
+		  \item مسیرهای صریح در اثر تغییرات بلافلاصه تغییر نمی‌کند و تلاش می‌کند تا حد امکان تغییر نکند.
+		\end{itemize}
+	\end{frame}
+
+	%-------------------------------------------------------------------------------
+	\begin{frame}{معماری شبکه‌سازی قطعی}
+		\begin{center}\begin{figure}
+			\includegraphics[scale=0.3]{images/detnet-stack.png}
+			\caption{معماری پشته شبکه‌های قطعی}
+		\end{figure}\end{center}
 	\end{frame}
 
 	%-------------------------------------------------------------------------------
