feat: Complete First Version after Dr.Bakhshi Points

--- a/main.tex
+++ b/main.tex
@@ -448,7 +448,25 @@
 	\begin{frame}{آشنایی با \lr{Network Calculus}}
 		\begin{itemize}\RTList{}
 			\justifying%
-			\item مورد
+			\item دیود \((R \cup +\infty, \wedge, +)\)
+			\item جمع تبدیل به محاسبه‌ی \lr{infimum} می‌شود.
+			\item ضرب به جمع تبدیل می‌شود.
+			\[ (3\wedge4) + 5 = (3 + 5) \wedge (4 + 5) = 8 \wedge 9 = 8 \]
+			\item پیچیش کمینه - جمع
+			\[ (f \otimes g)(t) = \int_{0}^{t} f(t-s)g(s)ds \]
+		\end{itemize}
+	\end{frame}
+
+	%-------------------------------------------------------------------------------
+	\begin{frame}{آشنایی با \lr{Network Calculus}}
+		\begin{itemize}\RTList{}
+			\justifying%
+		  \item \textcolor{green}{منحنی ورودی،}
+				جریان \(R\) با \( \alpha(.) \) محدود شده است.
+			\[ R(t) - R(s) \le \alpha(t - s) \]
+		  \item \textcolor{orange}{منحنی سرویس}
+				برای جریان وروردی \(R\) و جریان خروجی \(R^{*}\) برابر با \(b\):
+			\[ R^{*} \ge R \otimes b \]
 		\end{itemize}
 	\end{frame}
 
@@ -507,6 +525,24 @@
 
 	%-------------------------------------------------------------------------------
 	\section{مساله‌ی پیشنهادی}
+
+	%-------------------------------------------------------------------------------
+	\begin{frame}{مساله‌ی پیشنهادی}
+		\begin{itemize}\RTList{}
+				\justifying%
+				\item نیازمندی‌های شبکه‌های قطعی
+				\item کران بالای پارامترهای غیرقطعی
+				\item مجازی‌سازی کارکردهای شبکه
+		\end{itemize}
+	\end{frame}
+
+	%-------------------------------------------------------------------------------
+	\begin{frame}{مساله‌ی پیشنهادی}
+		\begin{block}{}
+			\centering
+			جایگذاری زنجیره‌هایی با کارکردهای قطعی در زیرساخت مجازی‌سازی شبکه
+		\end{block}
+	\end{frame}
 
 	%-------------------------------------------------------------------------------
 	\begin{frame}[allowframebreaks]{مراجع}
