feat: Update Solution Description

--- a/main.tex
+++ b/main.tex
@@ -328,7 +328,7 @@
 			\item تاخیر \textcolor{LimeGreen}{تصادفی}
 			\begin{itemize}\RTList{}
 				\item تئوری صف: حالت میانه را پیدا می‌کند.
-				\item \textcolor{Orange}{\lr{Network Calculus}}
+				\item \textcolor{Orange}{\lr{Network Calculus}}: بدترین حالت را پیدا می‌کند و می‌بایست مدل مناسب با کمترین فاصله را بدست آورد.
 			\end{itemize}
 		\end{itemize}
 	\end{frame}
