fix: Correct Issues Rerported by Prof.Bakhshi

--- a/main.tex
+++ b/main.tex
@@ -202,7 +202,7 @@
 	\end{frame}
 
 	%-------------------------------------------------------------------------------
-	\begin{frame}{معماری پیشنهادی}
+	\begin{frame}{راهکار \lr{NFV}}
 		\begin{itemize}\RTList{}
 			\justifying
 			\item مجازی‌سازی کارکردهای شبکه
@@ -220,7 +220,7 @@
 	\end{frame}
 
 	%-------------------------------------------------------------------------------
-	\begin{frame}{معماری پیشنهادی}
+	\begin{frame}{راهکار \lr{NFV}}
 		\begin{itemize}\RTList{}
 			\justifying
 			\item زنجیره‌سازی کارکرد سرویس
@@ -233,7 +233,7 @@
 	\end{frame}
 
 	%-------------------------------------------------------------------------------
-	\begin{frame}{معماری پیشنهادی}
+	\begin{frame}{راهکار \lr{NFV}}
 		\begin{itemize}\RTList{}
 			\justifying
 			\item \cite{Yang2021}
@@ -247,7 +247,7 @@
 	\end{frame}
 
 	%-------------------------------------------------------------------------------
-	\begin{frame}{معماری پیشنهادی}
+	\begin{frame}{راهکار \lr{NFV}}
 		\begin{center}\begin{figure}
 				\includegraphics[scale=0.5]{images/nfv-arch.png}
 				\caption{معماری سطح بالای مجازی‌سازی کارکردهای شبکه}
@@ -255,7 +255,7 @@
 	\end{frame}
 
 	%-------------------------------------------------------------------------------
-	\begin{frame}{معماری پیشنهادی}
+	\begin{frame}{راهکار \lr{NFV}}
 		\begin{itemize}\RTList{}
 			\justifying
 			\item \lr{NFVO} وظیفه‌ی استقرار زنجیره‌های کارکرد سرویس را برعهده دارد.
@@ -518,6 +518,18 @@
 	\end{frame}
 
 	%-------------------------------------------------------------------------------
+	\begin{frame}{مرجع~\cite{Duan2018}}
+		\begin{itemize}\RTList{}
+				\justifying%
+				\item یافتن کران پایین سرویس‌دهی و استفاده از \lr{Network Calculus} برای زنجیره‌سازی آن‌ها
+				\item در نظر گرفتن نمایه \lr{Latency Rate (LR)} برای سرویس‌ها
+				\[ P[r, \theta](t) = \max\{0, r(t - \theta)\} \]
+				\[ \theta: latency \]
+				\[ r: rate \]
+		\end{itemize}
+	\end{frame}
+
+	%-------------------------------------------------------------------------------
 	\section{مساله‌ی پیشنهادی}
 
 	%-------------------------------------------------------------------------------
@@ -536,6 +548,16 @@
 			\centering
 			جایگذاری زنجیره‌هایی با کارکردهای قطعی در زیرساخت مجازی‌سازی شبکه
 		\end{block}
+	\end{frame}
+
+	%-------------------------------------------------------------------------------
+	\begin{frame}{روش‌ پیشنهادی}
+		\begin{enumerate}\RTList{}
+				\justifying%
+				\item مدل‌سازی تاخیر با استفاده از \lr{Network Calculus} برای محاسبه کران‌های بالا
+				\item مدل‌سازی مساله‌ی بهینه‌سازی
+				\item تخمین مساله‌ی بهینه‌سازی با یادگیری تقویتی و ...
+		\end{enumerate}
 	\end{frame}
 
 	%-------------------------------------------------------------------------------
