--- a/references.bib
+++ b/references.bib
@@ -70,3 +70,14 @@
   title = {Maximizing Throughput of Delay-Sensitive {NFV}-Enabled Request Admissions via Virtualized Network Function Placement},
   journal = {{IEEE} Transactions on Cloud Computing}
 }
+
+@inproceedings{Duan2018,
+  doi = {10.1109/netsoft.2018.8460068},
+  url = {https://doi.org/10.1109/netsoft.2018.8460068},
+  year = {2018},
+  month = jun,
+  publisher = {{IEEE}},
+  author = {Qiang Duan},
+  title = {Modeling and Performance Analysis for Service Function Chaining in the {SDN}/{NFV} Architecture},
+  booktitle = {2018 4th {IEEE} Conference on Network Softwarization and Workshops ({NetSoft})}
+}
