fix: Fix Citation Issue

--- a/main.tex
+++ b/main.tex
@@ -47,7 +47,7 @@
 				\vspace{2pt}\insertnavigation{\paperwidth}\vspace{2pt}
 		\end{beamercolorbox}
 }
-  
+
 %---------------------------------------------------------------------------------
 % To force beamer use numbering in captions
 \setbeamertemplate{caption}[numbered]{}% Number float-like environments
@@ -236,14 +236,18 @@
 	\begin{frame}{راهکار \lr{NFV}}
 		\begin{itemize}\RTList{}
 			\justifying
-			\item \cite{Yang2021}
 			\item زنجیره‌های مرتب تمام
 			\item زنجیره‌های مرتب جزئی
 		\end{itemize}
 		\begin{center}\begin{figure}
 				\includegraphics[scale=0.3]{images/partially-totally-sfc.png}
 				\caption{زنجیره‌های مرتب جزئی و کامل}
-			\end{figure}\end{center}
+				\vspace*{-1cm}
+		\end{figure}\end{center}
+		\begin{latin}
+		\noindent\rule{1cm}{0.4pt}\\
+		\tiny\fullcite{Yang2021}
+		\end{latin}
 	\end{frame}
 
 	%-------------------------------------------------------------------------------
@@ -478,6 +482,10 @@
 			\item این مقاله محدودیت پردازش برای نودها و ظرفیت برای لینک‌ها را در نظر گرفته است.
 			\item کارکردها می‌توانند میزان جریان عبوری را تغییر دهند. مثلا دیوار آتش می‌تواند بسته‌ها را عبور ندهد.
 		\end{itemize}
+		\begin{latin}
+		\noindent\rule{1cm}{0.4pt}\\
+		\scriptsize\fullcite{Qu2016}
+		\end{latin}
 	\end{frame}
 
 	%-------------------------------------------------------------------------------
@@ -492,6 +500,10 @@
 						\item مستقل از اندازه بسته (\lr{deterministic})
 				\end{itemize}
 		\end{itemize}
+		\begin{latin}
+		\noindent\rule{1cm}{0.4pt}\\
+		\scriptsize\fullcite{Li2017}
+		\end{latin}
 	\end{frame}
 
 	%-------------------------------------------------------------------------------
@@ -502,6 +514,10 @@
 				\item در نظر گرفتن زنجیره‌های مرتب جزئی و تاثیر آن‌ها بر تاخیر
 				\item قطعه قطعه کردن زنجیره‌های مرتب جزئی برای تبدیل آن‌ها به تعدادی زنجیره مرتب کامل
 		\end{itemize}
+		\begin{latin}
+		\noindent\rule{1cm}{0.4pt}\\
+		\scriptsize\fullcite{Yang2019}
+		\end{latin}
 	\end{frame}
 
 	%-------------------------------------------------------------------------------
@@ -515,6 +531,10 @@
 				\item گسترش عرضی و طولی
 				\item عدم توانایی در نظر گرفتن همه این شرایط در مساله‌ی بهینه‌سازی
 		\end{itemize}
+		\begin{latin}
+		\noindent\rule{1cm}{0.4pt}\\
+		\scriptsize\fullcite{Huang2019}
+		\end{latin}
 	\end{frame}
 
 	%-------------------------------------------------------------------------------
@@ -527,6 +547,10 @@
 				\[ \theta: latency \]
 				\[ r: rate \]
 		\end{itemize}
+		\begin{latin}
+		\noindent\rule{1cm}{0.4pt}\\
+		\scriptsize\fullcite{Duan2018}
+		\end{latin}
 	\end{frame}
 
 	%-------------------------------------------------------------------------------
