feat: Add Reference

--- a/references.bib
+++ b/references.bib
@@ -81,3 +81,17 @@
   title = {Modeling and Performance Analysis for Service Function Chaining in the {SDN}/{NFV} Architecture},
   booktitle = {2018 4th {IEEE} Conference on Network Softwarization and Workshops ({NetSoft})}
 }
+
+@article{Miao2019,
+  doi = {10.1109/jsac.2019.2894304},
+  url = {https://doi.org/10.1109/jsac.2019.2894304},
+  year = {2019},
+  month = mar,
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  volume = {37},
+  number = {3},
+  pages = {613--626},
+  author = {Wang Miao and Geyong Min and Yulei Wu and Haojun Huang and Zhiwei Zhao and Haozhe Wang and Chunbo Luo},
+  title = {Stochastic Performance Analysis of Network Function Virtualization in Future Internet},
+  journal = {{IEEE} Journal on Selected Areas in Communications}
+}
