feat: Create Related Work Table

--- a/main.tex
+++ b/main.tex
@@ -567,6 +567,30 @@
 		\end{latin}
 	\end{frame}
 
+	\begin{frame}{سابقه‌ی کارها}
+		\fontsize{6pt}{7.2}\selectfont
+		\begin{table}[h]
+			\caption{جمع‌بندی مقالات کیفیت سرویس}
+			\vspace{0.5cm}
+			\begin{tabularx}{\textwidth}{XXXXXXX}
+				\toprule
+				مرجع &
+				\multicolumn{2}{X}{مدل‌سازی} &
+				\multicolumn{4}{X}{تاخیر} \\
+				\midrule
+				\lr{\#} &
+				تئوری صف &
+				\lr{Net. Calculus} &
+				انتشار &
+				انتقال &
+				صف &
+				پردازش \\
+				\midrule
+				\bottomrule
+			\end{tabularx}
+		\end{table}
+	\end{frame}
+
 	%-------------------------------------------------------------------------------
 	\section{مساله‌ی پیشنهادی}
 
