feat: Update Related Works Table

--- a/main.tex
+++ b/main.tex
@@ -586,6 +586,13 @@
 				صف &
 				پردازش \\
 				\midrule
+				\cite{Miao2019} &
+				--- &
+				\checkmark &
+				--- &
+				--- &
+				--- &
+				--- \\
 				\bottomrule
 			\end{tabularx}
 		\end{table}
