feat: Add New Reference

--- a/main.tex
+++ b/main.tex
@@ -567,16 +567,34 @@
 		\end{latin}
 	\end{frame}
 
+	%-------------------------------------------------------------------------------
+	\begin{frame}{مرجع~\cite{Fahmin2017}}
+		\begin{itemize}\RTList{}
+				\justifying%
+				\item در نظر گرفتن دو معماری مختلف برای ترکیب شبکه‌های \lr{NFV} و \lr{SDN}
+				\begin{itemize}\begin{latinitems}
+					\item \lr{Controller interacts with VNFs}
+					\item \lr{Switches interacts with VNFs}
+				\end{latinitems}\end{itemize}
+		\end{itemize}
+		\begin{latin}
+		\noindent\rule{1cm}{0.4pt}\\
+		\scriptsize\fullcite{Fahmin2017}
+		\end{latin}
+	\end{frame}
+
+	%-------------------------------------------------------------------------------
 	\begin{frame}{سابقه‌ی کارها}
 		\fontsize{6pt}{7.2}\selectfont
 		\begin{table}[h]
 			\caption{جمع‌بندی مقالات کیفیت سرویس}
 			\vspace{0.5cm}
-			\begin{tabularx}{\textwidth}{XXXXXXX}
+			\begin{tabularx}{\textwidth}{XXXXXXXX}
 				\toprule
 				مرجع &
 				\multicolumn{2}{X}{مدل‌سازی} &
-				\multicolumn{4}{X}{تاخیر} \\
+				\multicolumn{4}{X}{تاخیر} &
+			  	اندازه بافر \\
 				\midrule
 				\lr{\#} &
 				تئوری صف &
@@ -584,9 +602,50 @@
 				انتشار &
 				انتقال &
 				صف &
-				پردازش \\
+				پردازش &
+				~ \\
 				\midrule
 				\cite{Miao2019} &
+				--- &
+				\checkmark &
+				--- &
+				--- &
+				--- &
+				--- \\
+				\midrule
+				\cite{Qu2016} &
+				\checkmark &
+				--- &
+				--- &
+				--- &
+				--- &
+				--- \\
+				\midrule
+				\cite{Li2017} &
+				\checkmark &
+				--- &
+				--- &
+				--- &
+				--- &
+				--- \\
+				\midrule
+				\cite{Yang2019} &
+				\checkmark &
+				--- &
+				--- &
+				--- &
+				--- &
+				--- \\
+				\midrule
+				\cite{Huang2019} &
+				\checkmark &
+				--- &
+				--- &
+				--- &
+				--- &
+				--- \\
+				\midrule
+				\cite{Duan2018} &
 				--- &
 				\checkmark &
 				--- &
