--- a/references.bib
+++ b/references.bib
@@ -95,3 +95,14 @@
   title = {Stochastic Performance Analysis of Network Function Virtualization in Future Internet},
   journal = {{IEEE} Journal on Selected Areas in Communications}
 }
+
+@inproceedings{Fahmin2017,
+  doi = {10.1109/ficloudw.2017.76},
+  url = {https://doi.org/10.1109/ficloudw.2017.76},
+  year = {2017},
+  month = aug,
+  publisher = {{IEEE}},
+  author = {Ahmed Fahmin and Yuan-Cheng Lai and Md. Shohrab Hossain and Ying-Dar Lin and Dipon Saha},
+  title = {Performance Modeling of {SDN} with {NFV} under or aside the Controller},
+  booktitle = {2017 5th International Conference on Future Internet of Things and Cloud Workshops ({FiCloudW})}
+}
