feat: Update Slides

--- a/main.tex
+++ b/main.tex
@@ -584,6 +584,22 @@
 	\end{frame}
 
 	%-------------------------------------------------------------------------------
+	\begin{frame}{}
+		\begin{center}\begin{figure}
+			\includegraphics[scale=0.4]{images/fahmin2017-1.png}
+			\caption{معماری \lr{SDN} و  \lr{NFV} در کنار یکدیگر}
+		\end{figure}\end{center}
+	\end{frame}
+
+	%-------------------------------------------------------------------------------
+	\begin{frame}{}
+		\begin{center}\begin{figure}
+			\includegraphics[scale=0.4]{images/fahmin2017-2.png}
+			\caption{معماری \lr{SDN} و  \lr{NFV} در کنار یکدیگر}
+		\end{figure}\end{center}
+	\end{frame}
+
+	%-------------------------------------------------------------------------------
 	\begin{frame}{سابقه‌ی کارها}
 		\fontsize{6pt}{7.2}\selectfont
 		\begin{table}[h]
@@ -685,6 +701,15 @@
 				\item مدل‌سازی تاخیر با استفاده از \lr{Network Calculus} برای محاسبه کران‌های بالا
 				\item مدل‌سازی مساله‌ی بهینه‌سازی
 				\item تخمین مساله‌ی بهینه‌سازی با یادگیری تقویتی و ...
+		\end{enumerate}
+	\end{frame}
+
+	%-------------------------------------------------------------------------------
+	\begin{frame}{یادگیری تقویتی}
+		\begin{enumerate}\RTList{}
+				\justifying%
+				\item استفاده از عامل‌های یادگیری تقویتی در مساله عامل برنامه‌ریزی خطی صحیح
+				\item استفاده از عامل‌های یادگیری تقویتی در مساله جایگذاری سرویس‌های مجازی شبکه
 		\end{enumerate}
 	\end{frame}
 
