feat: Update Slides

--- a/main.tex
+++ b/main.tex
@@ -709,6 +709,9 @@
 		\begin{enumerate}\RTList{}
 				\justifying%
 				\item استفاده از عامل‌های یادگیری تقویتی در مساله عامل برنامه‌ریزی خطی صحیح
+				\begin{latin}
+				\scriptsize\fullcite{pmlr-v119-tang20a}
+				\end{latin}
 				\item استفاده از عامل‌های یادگیری تقویتی در مساله جایگذاری سرویس‌های مجازی شبکه
 		\end{enumerate}
 	\end{frame}
