--- a/references.bib
+++ b/references.bib
@@ -106,3 +106,5 @@
   title = {Performance Modeling of {SDN} with {NFV} under or aside the Controller},
   booktitle = {2017 5th International Conference on Future Internet of Things and Cloud Workshops ({FiCloudW})}
 }
+
+ @InProceedings{pmlr-v119-tang20a, title = {Reinforcement Learning for Integer Programming: Learning to Cut}, author = {Tang, Yunhao and Agrawal, Shipra and Faenza, Yuri}, booktitle = {Proceedings of the 37th International Conference on Machine Learning}, pages = {9367--9376}, year = {2020}, editor = {Hal Daumé III and Aarti Singh}, volume = {119}, series = {Proceedings of Machine Learning Research}, month = {13--18 Jul}, publisher = {PMLR}, pdf = {http://proceedings.mlr.press/v119/tang20a/tang20a.pdf}, url = { http://proceedings.mlr.press/v119/tang20a.html }, abstract = {Integer programming is a general optimization framework with a wide variety of applications, e.g., in scheduling, production planning, and graph optimization. As Integer Programs (IPs) model many provably hard to solve problems, modern IP solvers rely on heuristics. These heuristics are often human-designed, and tuned over time using experience and data. The goal of this work is to show that the performance of those solvers can be greatly enhanced using reinforcement learning (RL). In particular, we investigate a specific methodology for solving IPs, known as the Cutting Plane Method. This method is employed as a subroutine by all modern IP solvers. We present a deep RL formulation, network architecture, and algorithms for intelligent adaptive selection of cutting planes (aka cuts). Across a wide range of IP tasks, we show that our trained RL agent significantly outperforms human-designed heuristics, and effectively generalizes to larger instances and across IP problem classes. The trained agent is also demonstrated to benefit the popular downstream application of cutting plane methods in Branch-and-Cut algorithm, which is the backbone of state-of-the-art commercial IP solvers.} }
