feat: Add Checkmarks

--- a/main.tex
+++ b/main.tex
@@ -626,14 +626,14 @@
 				\checkmark &
 				--- &
 				--- &
-				--- &
-				--- \\
+				\checkmark &
+				\checkmark \\
 				\midrule
 				\cite{Qu2016} &
 				\checkmark &
 				--- &
-				--- &
-				--- &
+				\checkmark &
+				\checkmark &
 				--- &
 				--- \\
 				\midrule
@@ -641,32 +641,32 @@
 				\checkmark &
 				--- &
 				--- &
-				--- &
+				\checkmark &
 				--- &
 				--- \\
 				\midrule
 				\cite{Yang2019} &
 				\checkmark &
 				--- &
+				\checkmark &
 				--- &
-				--- &
-				--- &
+				\checkmark &
 				--- \\
 				\midrule
 				\cite{Huang2019} &
 				\checkmark &
 				--- &
 				--- &
-				--- &
-				--- &
+				\checkmark &
+				\checkmark &
 				--- \\
 				\midrule
 				\cite{Duan2018} &
 				--- &
 				\checkmark &
-				--- &
-				--- &
-				--- &
+				\checkmark &
+				\checkmark &
+				\checkmark &
 				--- \\
 				\bottomrule
 			\end{tabularx}
